# RB6_lite_Manager

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  DECISIONES.md  RESEARCH_LIMITS.md  ROADMAP.md
docs/ADR/: 0001-decision-dbus-pygobject-gio.md  0002-wireplumber-0.4-lua-config-scope.md  0003-no-pipewire-python-binding.md  0004-clean-architecture-dependency-rule.md  0005-device-profile-contract.md
docs/bluez/: dbus-interfaces.md
src/openbuds/: __init__.py
src/openbuds/application/: __init__.py  apply_optimization.py  get_device_info.py  run_benchmark.py  run_health_check.py  scan_devices.py
src/openbuds/cli/: __init__.py  main.py
src/openbuds/core/: __init__.py  config.py  errors.py  events.py  logging_setup.py  result.py
src/openbuds/device_profiles/: __init__.py  loader.py  redmi_buds_6_lite.yaml
src/openbuds/domain/: __init__.py  enums.py
src/openbuds/domain/interfaces/: __init__.py  audio_repo.py  bluetooth_repo.py  config_repo.py  diagnostics_repo.py  observer.py  profile_repo.py
src/openbuds/domain/models/: __init__.py  adapter.py  battery.py  benchmark.py  codec.py  device.py  diagnostic.py  rssi.py  system.py
src/openbuds/infrastructure/: __init__.py
src/openbuds/infrastructure/bluez/: __init__.py  bluez_repository.py  dbus_client.py  object_mapper.py
src/openbuds/infrastructure/persistence/: __init__.py  app_config.py  benchmark_history.py
src/openbuds/infrastructure/pipewire/: __init__.py  pipewire_repository.py  pw_dump_parser.py
src/openbuds/infrastructure/system/: __init__.py  environment_detector.py
src/openbuds/infrastructure/wireplumber/: __init__.py  backup_manager.py  config_editor.py  wireplumber_repository.py  wpctl_adapter.py
src/openbuds/plugins/: __init__.py  plugin_interface.py
src/openbuds/presentation/: __init__.py
src/openbuds/presentation/notifications/: __init__.py  notifier.py
src/openbuds/presentation/qt/: __init__.py  main_window.py  tray_indicator.py
src/openbuds/presentation/qt/view_models/: __init__.py
src/openbuds/presentation/qt/views/: __init__.py  audio.py  benchmark.py  dashboard.py  device.py  diagnostic.py  health_check.py  lab.py  logs.py  optimization.py  settings.py
tests/: conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_enums.py  test_events.py  test_logging_setup.py  test_models.py  test_package.py  test_result_type.py
